name:                http2stream
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/plintx/http2stream#readme
license:             MIT
license-file:        LICENSE
author:              Quoc-An Ho
maintainer:          quoc.ho@matrix.ai
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP2
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http2
                     , stm
  default-language:    Haskell2010

test-suite http2stream-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2stream
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/http2stream
