name:                http2stream
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/plintx/http2stream#readme
license:             BSD3
license-file:        LICENSE
author:              Quoc-An Ho
maintainer:          quoc.ho@matrix.ai
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Stream.HTTP2
                     , Network.Stream.HTTP2.Types
                     , Network.Stream.HTTP2.Multiplexer
  other-modules:       Network.Stream.HTTP2.EncodeFrame
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http2
                     , stm
                     , io-streams
                     , containers
                     , extra
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.Stream.HTTP2.Multiplexer
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http2
                     , http2stream
                     , stm
                     , io-streams
                     , containers
                     , network
                     , extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
                       -fprof-auto-calls -fbreak-on-exception
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/http2stream
